# studienarbeit-mianet

./: .gitignore  .travis.yml  ChangeLog.md  Dice.html  Distributor.html  GameInfo.html  Helper.html  LICENSE  Message.html  MiaNet.cabal  MiaNet.haddock  MiaNet.txt  MianetConstants.html  MianetDistributor.html  MianetDraws.html  MianetGameHandler.html  MianetGetter.html  README.md  Types.html  doc-index.html  index.html  mini_Dice.html  mini_Distributor.html  mini_GameInfo.html  mini_Helper.html  mini_Message.html  mini_MianetConstants.html  mini_MianetDistributor.html  mini_MianetDraws.html  mini_MianetGameHandler.html  mini_MianetGetter.html  mini_Types.html  stack.yaml  websocketclient.cabal  websocketserver.cabal
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/flag-cache/: network-2.6.3.2-IsLM4TXcLoRI0fmmBYVyQz  random-1.1-9tceXaeYIMZ4JrKq20Egog
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/pkgdb/: package.cache
app/: Client.hs  Main.hs  Server.hs
benchmark/: Bench.hs
docs/: Rules.txt
src/: Dice.hs  Dice.html  Distributor.hs  Distributor.html  GameInfo.hs  GameInfo.html  Helper.hs  Helper.html  Lib.hs  Message.hs  Message.html  MianetConstants.hs  MianetConstants.html  MianetDistributor.hs  MianetDistributor.html  MianetDraws.hs  MianetDraws.html  MianetGameHandler.hs  MianetGameHandler.html  MianetGetter.hs  MianetGetter.html  Rules.hs  Types.hs  Types.html
test/: DiceSpec.hs  DocTest.hs  GameInfoSpec.hs  HLint.hs  HelperSpec.hs  LibSpec.hs  MessageSpec.hs  MianetDrawsSpec.hs  MianetGetterSpec.hs  Spec.hs
