name:                MiaNet
version:             0.1.0.0
synopsis:            An example package.
description:         Package for the fp lecture project at hm.edu
homepage:            https://github.com/ob-fun-ws17/studienarbeit-mianet#readme
license:             BSD3
license-file:        LICENSE
author :             Engelbrecht Nils
maintainer:          n.engelbrecht1@hm.edu
copyright:           2017 Engelbrecht Nils
category:            Misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

executable MiaNet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MiaNet
                     , random
                     , network
  default-language:    Haskell2010

test-suite MiaNet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MiaNet
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             DocTest.hs
  build-depends:       base
                     , doctest
                     , Glob
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hlint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base
                     , hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark criterion
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Bench.hs
  build-depends:       base
                     , MiaNet
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ob-fun-ws17/studienarbeit-mianet
